# flask-nix-example

./: .gitignore  Dockerfile  Dockerfile.init  README.md  flake.nix  pyproject.toml  requirements.txt
src/: app.py
