[tool.poetry]
name = "flask-example"
version = "0.1.0"
description = ""
authors = ["Mitchell Hashimoto <mitchell.hashimoto@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"

[tool.poetry.scripts]
app = 'src.app:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
